--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul class="nav navbar-nav">
 						<li class="act"><a href="index.html">About Me</a></li>
                                                 <li class="hvr-bubble-bottom"><a href="Resume.html">Resume</a></li>
-                                                <li class="hvr-bubble-bottom"><a href="contact.html">Contact</a></li>
+                                                <!-- <li class="hvr-bubble-bottom"><a href="contact.html">Contact</a></li>
                                                 <li class="hvr-bubble-bottom"><a href="blog.html">My Blogs</a></li>
                                                 <li class="hvr-bubble-bottom"><a href="blog.html">Quotes</a></li>
-                                                <li class="hvr-bubble-bottom"><a href="portolio.html" >My Portfolio</a></li>
+                                                <li class="hvr-bubble-bottom"><a href="portolio.html" >My Portfolio</a></li> -->
 						
 					</ul>
 				</div><!-- /.navbar-collapse -->	
