--- a/Resume.html
+++ b/Resume.html
@@ -89,7 +89,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="hvr-bubble-bottom "><a href="index.html">About Me</a></li>
-                        <li class="act"><a href="Resume.html">Resume</a></li>
+                        <!-- <li class="act"><a href="Resume.html">Resume</a></li> -->
 						
 						
 					</ul>
